--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <title>Vite + React</title>
