--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>MoovoX | The Movie Database</title>
   </head>
   <body>
     <div id="root"></div>
